--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpgg"/>
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Lion Image"
+  title="We're here to help you!"
+/>
+    <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Lion Image"
+  title="The Savannah Lion!"
+/>
   </body>
 </html>
